# db-git

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
src/db_git/: __init__.py  config.py  db.py  errors.py  git.py  hook_script.py  state.py  storage.py
src/db_git/backends/: __init__.py
src/db_git/backends/postgresql/: backend.py  branch_db.py  connections.py  pgdump.py  template.py
src/db_git/cli/: __init__.py  _common.py  _console.py  _prompts.py  branch.py  hook.py  init.py  inspect.py  snapshot.py
src/git_db/: config.py  db.py  errors.py  git.py  hook_script.py  state.py  storage.py
src/git_db/backends/: __init__.py
src/git_db/backends/postgresql/: backend.py  branch_db.py  connections.py  pgdump.py  template.py
src/git_db/cli/: __init__.py  _common.py  _console.py  _format.py  _prompts.py  branch.py  hook.py  init.py  inspect.py  snapshot.py
tests/: _pg_helpers.py  conftest.py
tests/e2e/: _helpers.py  conftest.py  test_per_branch_pgdump_workflow.py  test_per_branch_template_workflow.py  test_shared_pgdump_workflow.py  test_shared_template_workflow.py
tests/integration/: conftest.py  test_branch_db.py  test_connections.py  test_pgdump_strategy.py  test_template_strategy.py
tests/unit/: test_cli.py  test_config.py  test_db.py  test_git.py  test_state.py  test_storage.py
